feat(api): docker exec shell streaming with websocket
